--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
-# Created by https://www.toptal.com/developers/gitignore/api/macos,jetbrains+all,jekyll
-# Edit at https://www.toptal.com/developers/gitignore?templates=macos,jetbrains+all,jekyll
+# Created by https://www.toptal.com/developers/gitignore/api/windows,linux,macos,jetbrains+all,jekyll
+# Edit at https://www.toptal.com/developers/gitignore?templates=windows,linux,macos,jetbrains+all,jekyll
 
 ### Jekyll ###
 _site/
@@ -98,6 +98,21 @@ fabric.properties
 !.idea/codeStyles
 !.idea/runConfigurations
 
+### Linux ###
+*~
+
+# temporary files which can be created if a process still has a handle open of a deleted file
+.fuse_hidden*
+
+# KDE directory preferences
+.directory
+
+# Linux trash folder which might appear on any partition or disk
+.Trash-*
+
+# .nfs files are created when an open file is removed but is still being accessed
+.nfs*
+
 ### macOS ###
 # General
 .DS_Store
@@ -130,4 +145,30 @@ Temporary Items
 # iCloud generated files
 *.icloud
 
-# End of https://www.toptal.com/developers/gitignore/api/macos,jetbrains+all,jekyll
+### Windows ###
+# Windows thumbnail cache files
+Thumbs.db
+Thumbs.db:encryptable
+ehthumbs.db
+ehthumbs_vista.db
+
+# Dump file
+*.stackdump
+
+# Folder config file
+[Dd]esktop.ini
+
+# Recycle Bin used on file shares
+$RECYCLE.BIN/
+
+# Windows Installer files
+*.cab
+*.msi
+*.msix
+*.msm
+*.msp
+
+# Windows shortcuts
+*.lnk
+
+# End of https://www.toptal.com/developers/gitignore/api/windows,linux,macos,jetbrains+all,jekyll
